Added frontend everything working good